为grpc编写测试 添加role管理权限
