# doc/swagger/simple_bank.swagger.json
@@ -5,13 +5,13 @@
     "version": "1.2",
     "contact": {
       "name": "Zhaozhonghe",
-      "url": "https://github.com/Whuichenggong",
+      "url": "https://github.com/Zhonghe-zhao",
       "email": "zhaozhonghe40@gmail.com"
     }
   },
   "tags": [
     {
-      "name": "Simplebank"
+      "name": "SimpleBank"
     }
   ],
   "consumes": [
@@ -21,11 +21,11 @@
     "application/json"
   ],
   "paths": {
-    "/v1/create_users": {
+    "/v1/create_user": {
       "post": {
-        "summary": "Create a new user",
-        "description": "User this API to create a new user",
-        "operationId": "Simplebank_CreateUser",
+        "summary": "Create new user",
+        "description": "Use this API to create a new user",
+        "operationId": "SimpleBank_CreateUser",
         "responses": {
           "200": {
             "description": "A successful response.",
@@ -51,15 +51,15 @@
           }
         ],
         "tags": [
-          "Simplebank"
+          "SimpleBank"
         ]
       }
     },
-    "/v1/login_users": {
+    "/v1/login_user": {
       "post": {
-        "summary": "Login a user",
-        "description": "User this API to login a user and get a token \u0026 refresh token",
-        "operationId": "Simplebank_LoginUser",
+        "summary": "Login user",
+        "description": "Use this API to login user and get access token \u0026 refresh token",
+        "operationId": "SimpleBank_LoginUser",
         "responses": {
           "200": {
             "description": "A successful response.",
@@ -85,15 +85,15 @@
           }
         ],
         "tags": [
-          "Simplebank"
+          "SimpleBank"
         ]
       }
     },
-    "/v1/update_users": {
-      "post": {
-        "summary": "Update a new user",
-        "description": "User this API to Update a new user",
-        "operationId": "Simplebank_UpdateUser",
+    "/v1/update_user": {
+      "patch": {
+        "summary": "Update user",
+        "description": "Use this API to update user",
+        "operationId": "SimpleBank_UpdateUser",
         "responses": {
           "200": {
             "description": "A successful response.",
@@ -119,7 +119,46 @@
           }
         ],
         "tags": [
-          "Simplebank"
+          "SimpleBank"
+        ]
+      }
+    },
+    "/v1/verify_email": {
+      "get": {
+        "summary": "Verify email",
+        "description": "Use this API to verify user's email address",
+        "operationId": "SimpleBank_VerifyEmail",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/pbVerifyEmailResponse"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/rpcStatus"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "emailId",
+            "in": "query",
+            "required": false,
+            "type": "string",
+            "format": "int64"
+          },
+          {
+            "name": "secretCode",
+            "in": "query",
+            "required": false,
+            "type": "string"
+          }
+        ],
+        "tags": [
+          "SimpleBank"
         ]
       }
     }
@@ -230,6 +269,14 @@
         "createdAt": {
           "type": "string",
           "format": "date-time"
+        }
+      }
+    },
+    "pbVerifyEmailResponse": {
+      "type": "object",
+      "properties": {
+        "isVerified": {
+          "type": "boolean"
         }
       }
     },
